# campbooks

./: .env.example  .gitignore  .rubocop.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.dev  Gemfile  LICENSE  PRODUCT.md  Procfile.dev  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  openapi.yaml  package.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-release.yml  base-image.yml  ci.yml  cli-ci.yml  codeql.yml  deploy-website.yml  desktop-release.yml  notify-deploy.yml  notify-website.yml  publish-image.yml  release-cli.yml  verify-changelog.yml
.impeccable/: design.json
app/controllers/: activity_controller.rb  agent_chat_controller.rb  agent_messages_controller.rb  agent_threads_controller.rb  agent_tools_controller.rb  ai_configurations_controller.rb  ai_setup_chats_controller.rb  application_controller.rb  bug_reports_controller.rb  calendar_accounts_controller.rb  calendar_controller.rb  calendar_events_controller.rb  calendar_imports_controller.rb  calendar_visibilities_controller.rb  calendar_webhooks_controller.rb  calendars_controller.rb  compose_attachments_controller.rb  compose_images_controller.rb  configurations_controller.rb  contacts_controller.rb  (+53 more)
cli/: .goreleaser.yaml  README.md  go.mod  go.sum  main.go
config/: application.rb  brakeman.ignore  bundler-audit.yml  credentials.yml.enc  database.yml  i18n-tasks.yml  importmap.rb  plans.yml  recurring.yml  routes.rb  storage.yml
db/: cable_schema.rb  schema.rb  seeds.rb
docs/: action-catalog.md  action-system.md  ai-agents.md  api.md  app-store-listings.md  cli.md  components.md  email-styles.md  email-triage.md  embeddings.md  gdpr-compliance.md  i18n-extraction-guide.md  messaging.md  observability.md  push-notifications.md  self-hosting.md  system-health.md  workflow-actions.md
lib/: uuid_v7.rb
native/: .gitignore  README.md  TESTING.md
native/desktop/src-tauri/: Cargo.toml  tauri.conf.json
native/desktop/src-tauri/capabilities/: default.json
native/desktop/src-tauri/icons/: icon.icns
native/desktop/src-tauri/src/: config.rs  lib.rs  main.rs  oauth.rs
script/: migrate_blobs_to_s3.rb
spec/: rails_helper.rb
test/: test_helper.rb
ui-refactor/: auth-onboarding-notifications-chat.md  dashboard-layouts-shared.md  documents-contacts.md  email.md  settings.md
website/: .gitignore  docusaurus.config.ts  package-lock.json  sidebars.ts
(+3104 files in other folders)
