[package]
name = "campbooks-desktop"
version = "0.1.0"
description = "Campbooks desktop app"
authors = ["Not A Camp"]
edition = "2021"
rust-version = "1.77"

# The binary (src/main.rs) is a thin entry point that calls into the library
# crate below, mirroring the standard Tauri v2 layout.
[lib]
name = "campbooks_desktop_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# OAuth deep-link handoff (`campbooks://oauth?…`) + single-instance so a second
# launch carrying the deep link is forwarded to the running window.
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
# Opens OAuth provider pages in the system browser (providers reject embedded
# webviews).
tauri-plugin-opener = "2"
url = "2"
# Required by the `tauri::generate_context!` macro expansion.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auto-update is wired as a follow-up (see native/desktop/README.md →
# "Auto-update"); add `tauri-plugin-updater` here when activating.

[profile.release]
# Thin shell — optimize for size.
opt-level = "s"
lto = true
strip = true
